@@ -1,4 +1,3 @@
-
 :mod:`colorsys` --- Conversions between color systems
 =====================================================
 
@@ -15,8 +14,11 @@ spaces are floating point values.  In the YIQ space, the Y coordinate is between
 0 and 1, but the I and Q coordinates can be positive or negative.  In all other
 spaces, the coordinates are all between 0 and 1.
 
-More information about color spaces can be found at
-http://www.poynton.com/ColorFAQ.html.
+.. seealso::
+
+   More information about color spaces can be found at
+   http://www.poynton.com/ColorFAQ.html and
+   http://www.cambridgeincolour.com/tutorials/color-spaces.htm.
 
 The :mod:`colorsys` module defines the following functions:
 
@@ -57,4 +59,3 @@ Example::
    (0.25, 0.5, 0.4)
    >>> colorsys.hsv_to_rgb(0.25, 0.5, 0.4)
    (0.3, 0.4, 0.2)
-
