@@ -40,25 +40,26 @@
    * Credit the author of a patch or bugfix.   Just the name is
    sufficient; the e-mail address isn't necessary.
    
-   * It's helpful to add the bug/patch number in an parenthetical
+   * It's helpful to add the bug/patch number in a parenthetical comment.
    
    XXX Describe the transmogrify() function added to the socket
    module.
    (Contributed by P.Y. Developer; :issue:`12345`.)
    
-   This saves the maintainer the effort of going through the SVN logs
+   This saves the maintainer some effort going through the SVN logs
    when researching a change.
 
-This article explains the new features in Python 2.6.  No release date for
-Python 2.6 has been set; it will probably be released in mid 2008.
+This article explains the new features in Python 2.6.  The release
+schedule is described in :pep:`361`; currently the final release is
+scheduled for September 3 2008.
 
 This article doesn't attempt to provide a complete specification of
 the new features, but instead provides a convenient overview.  For
 full details, you should refer to the documentation for Python 2.6. If
-you want to understand the complete implementation and design
-rationale, refer to the PEP for a particular new feature.  For smaller
-changes, this edition of "What's New in Python" links to the bug/patch
-item for each change whenever possible.
+you want to understand the rationale for the design and
+implementation, refer to the PEP for a particular new feature.
+Whenever possible, "What's New in Python" links to the bug/patch item
+for each change.
 
 .. Compare with previous release in 2 - 3 sentences here.
    add hyperlink when the documentation becomes available online.
@@ -481,24 +482,41 @@ can now be used in scripts running from inside a package.
 
 .. ======================================================================
 
-.. ::
+.. _pep-0370:
 
-    .. _pep-0370:
+PEP 370: Per-user ``site-packages`` Directory
+=====================================================
 
-    PEP 370: XXX
-    =====================================================
+When you run Python, the module search path ``sys.modules`` usually
+includes a directory whose path ends in ``"site-packages"``.  This
+directory is intended to hold locally-installed packages available to
+all users on a machine or using a particular site installation.
 
-    When you run Python, the module search page ``sys.modules`` usually
-    includes a directory whose path ends in ``"site-packages"``.  This
-    directory is intended to hold locally-installed packages available to
-    all users on a machine or using a particular site installation.
+Python 2.6 introduces a convention for user-specific site directories.
+The directory varies depending on the platform:
 
-    Python 2.6 introduces a convention for user-specific site directories.
+* Unix and MacOS: :file:`~/.local/`
+* Windows: :file:`%APPDATA%/Python`
 
-    .. seealso::
+Within this directory, there will be version-specific subdirectories,
+such as :file:`lib/python2.6/site-packages` on Unix/MacOS and
+:file:`Python26/site-packages` on Windows.
 
-       :pep:`370` - XXX
-         PEP written by XXX; implemented by Christian Heimes.
+If you don't like the default directory, it can be overridden by an
+environment variable.  :envvar:`PYTHONUSERBASE` sets the root
+directory used for all Python versions supporting this feature.  On
+Windows, the directory for application-specific data can be changed by
+setting the :envvar:`APPDATA` environment variable.  You can also
+modify the :file:`site.py` file for your Python installation.
+
+The feature can be disabled entirely by running Python with the
+:option:`-s` option or setting the :envvar:`PYTHONNOUSERSITE`
+environment variable.
+
+.. seealso::
+
+   :pep:`370` - Per-user ``site-packages`` Directory
+     PEP written and implemented by Christian Heimes.
 
   
 .. ======================================================================
@@ -1450,6 +1468,12 @@ fixes.  Here's a partial list of the most notable changes, sorted alphabetically
 by module name. Consult the :file:`Misc/NEWS` file in the source tree for a more
 complete list of changes, or look through the CVS logs for all the details.
 
+* (3.0-warning mode) The :mod:`audiodev` module is being deprecated,
+  and has been removed from Python 3.0, so importing it now triggers a
+  warning.  The module hasn't been maintained for several versions,
+  and is written against an outdated sound interface for SunOS and
+  IRIX.
+
 * The :mod:`bsddb.dbshelve` module now uses the highest pickling protocol
   available, instead of restricting itself to protocol 1.
   (Contributed by W. Barnes; :issue:`1551443`.)
@@ -2104,7 +2128,12 @@ complete list of changes, or look through the CVS logs for all the details.
 
   (Added by Facundo Batista.) 
 
-* The XML-RPC classes :class:`SimpleXMLRPCServer` and :class:`DocXMLRPCServer`
+* The :mod:`warnings` module's :func:`formatwarning` and :func:`showwarning` 
+  gained an optional *line* argument that can be used to supply the
+  line of source code.  (Added as part of :issue:`1631171`, which re-implemented
+  part of the :mod:`warnings` module in C code.)
+
+* The XML-RPC :class:`SimpleXMLRPCServer` and :class:`DocXMLRPCServer`
   classes can now be prevented from immediately opening and binding to
   their socket by passing True as the ``bind_and_activate``
   constructor parameter.  This can be used to modify the instance's
@@ -2143,6 +2172,9 @@ complete list of changes, or look through the CVS logs for all the details.
     z.extractall()
 
   (Contributed by Alan McIntyre; :issue:`467924`.)
+
+  Also, :mod:`zipfile` now supports using Unicode filenames
+  for archived files.  (Contributed by Alexey Borzenkov; :issue:`1734346`.)
 
 .. ======================================================================
 .. whole new modules get described in subsections here
